调整引用路径

--- a/demo/index.html
+++ b/demo/index.html
@@ -131,14 +131,15 @@
                 <ul id="channgyongLink"></ul>
             </div>
         </div>-->
-
     </div>
+
     <div id="center" data-options="region:'center',border:false" style="overflow:hidden;">
         <div id="index_tabs" style="width:100%;height:100%">
             <div title="系统首页" iconCls="fa fa-home" data-options="border:true,
             content:'<iframe src=\'./html/portal/index.html\' scrolling=\'auto\' frameborder=\'0\' style=\'width:100%;height:100%;\'></iframe>'"></div>
         </div>
     </div>
+
     <div data-options="region:'south',border:true"
          style="text-align:center;height:30px;line-height:30px;border-bottom:0;overflow:hidden;">
         <input type="hidden" id="userNameId" name="userNameId" value="${userNameId}"/>
@@ -148,7 +149,7 @@
             <a href="http://www.ewsd.cn" target="_blank">深圳易网时代信息技术有限公司</a>
             <a href="http://www.miitbeian.gov.cn" target="_blank">粤ICP备16028103号-1</a>
         </span>
-        <span style="float:right;padding-right:5px;width:30%;text-align: right;">企业正式版 V2.3(20161205)</span>
+        <span style="float:right;padding-right:5px;width:30%;text-align: right;">正式版v1.0</span>
     </div>
 </div>
 
