--- a/demo/html/extend/editor_index.html
+++ b/demo/html/extend/editor_index.html
@@ -15,7 +15,7 @@
     <!-- TopJUI框架基础 -->
     <script type="text/javascript" src="../../topjui/js/topjui.base.min.js"></script>
     <!-- TopJUI框架配置 -->
-    <script type="text/javascript" src="../../topjui/js/topjui.config.js"></script>
+    <script type="text/javascript" src="../../static/public/js/topjui.config.js"></script>
     <!-- TopJUI框架核心-->
     <script type="text/javascript" src="../../topjui/js/topjui.core.js"></script>
     <!-- TopJUI中文支持 -->
