--- a/demo/index.html
+++ b/demo/index.html
@@ -11,8 +11,6 @@
     <!-- 浏览器标签图片 -->
     <link rel="shortcut icon" href="./topjui/image/favicon.ico"/>
     <!-- TopJUI框架样式 -->
-    <!--<link type="text/css" href="./topjui/themes/default/topjui.base.css" rel="stylesheet"/>
-    <link type="text/css" href="./topjui/css/topjui.style.css" rel="stylesheet"/>-->
     <link type="text/css" href="./topjui/css/topjui.core.min.css" rel="stylesheet">
     <link type="text/css" href="./topjui/themes/default/topjui.redlight.css" rel="stylesheet" id="dynamicTheme"/>
     <!-- FontAwesome字体图标 -->
@@ -21,13 +19,13 @@
     <script type="text/javascript" src="./topjui/plugins/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="./topjui/plugins/jquery/jquery.cookie.js"></script>
     <!-- TopJUI框架配置 -->
-    <script type="text/javascript" src="./topjui/js/topjui.config.js"></script>
+    <script type="text/javascript" src="./static/public/js/topjui.config.js"></script>
     <!-- TopJUI框架核心 -->
     <script type="text/javascript" src="./topjui/js/topjui.core.min.js"></script>
     <!-- TopJUI中文支持 -->
     <script type="text/javascript" src="./topjui/js/locale/topjui.lang.zh_CN.js"></script>
     <!-- 首页js -->
-    <script type="text/javascript" src="./topjui/js/topjui.index.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./static/public/js/topjui.index.js" charset="utf-8"></script>
 </head>
 
 <body>
