--- a/demo/html/form/numberspinner_index.html
+++ b/demo/html/form/numberspinner_index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.cookie.js"></script>
     <!-- TopJUI框架配置 -->
-    <script type="text/javascript" src="../../topjui/js/topjui.config.js"></script>
+    <script type="text/javascript" src="../../static/public/js/topjui.config.js"></script>
     <!-- TopJUI框架核心-->
     <script type="text/javascript" src="../../topjui/js/topjui.core.js"></script>
     <!-- TopJUI中文支持 -->
