增加排序功能

--- a/demo/html/complex/datagrid.html
+++ b/demo/html/complex/datagrid.html
@@ -28,10 +28,10 @@
     <thead>
     <tr>
         <th data-options="field:'uuid',title:'ID',checkbox:true"></th>
-        <th data-options="field:'name',title:'商品名称'"></th>
-        <th data-options="field:'code',title:'商品编号'"></th>
-        <th data-options="field:'spec',title:'规格型号'"></th>
-        <th data-options="field:'sale_price',title:'销售单价'"></th>
+        <th data-options="field:'name',title:'商品名称',sortable:true"></th>
+        <th data-options="field:'code',title:'商品编号',sortable:true"></th>
+        <th data-options="field:'spec',title:'规格型号',sortable:true"></th>
+        <th data-options="field:'sale_price',title:'销售单价',sortable:true"></th>
     </tr>
     </thead>
 </table>
