--- a/demo/index.html
+++ b/demo/index.html
@@ -58,37 +58,37 @@
                     <table id="topmenucontent" cellpadding="0" cellspacing="0">
                         <td id="1325" title="这只是静态演示" class="topmenu selected systemName">
                             <a class="l-btn-text bannerMenu" href="javascript:void(0)">
-                                <lable class="fa  fa-hand-pointer-o"></lable>
-                                <br><span style="white-space:nowrap;">静态演示</span>
+                                <p><lable class="fa  fa-hand-pointer-o"></lable></p>
+                                <p><span style="white-space:nowrap;">静态演示</span></p>
                             </a>
                         </td>
                         <td id="60" title="TopJUI开发文档" class="topmenu systemName">
                             <a class="l-btn-text bannerMenu" href="javascript:void(0)">
-                                <lable class="fa fa-puzzle-piece"></lable>
-                                <br><span style="white-space:nowrap;">开发文档</span>
+                                <p><lable class="fa fa-puzzle-piece"></lable></p>
+                                <p><span style="white-space:nowrap;">开发文档</span></p>
                             </a>
                         </td>
                         <td id="" title="人力资源" class="topmenu systemName">
                             <a class="l-btn-text bannerMenu" href="javascript:void(0)">
-                                <lable class="fa fa-sort-amount-asc"></lable>
-                                <br><span style="white-space:nowrap;">人力资源</span>
+                                <p><lable class="fa fa-sort-amount-asc"></lable></p>
+                                <p><span style="white-space:nowrap;">人力资源</span></p>
                             </a>
                         </td>
                         <td id="" title="财务管理" class="topmenu systemName">
                             <a class="l-btn-text bannerMenu" href="javascript:void(0)">
-                                <lable class="fa  fa-weixin"></lable>
-                                <br><span style="white-space:nowrap;">财务管理</span></a>
+                                <p><lable class="fa  fa-weixin"></lable></p>
+                                <p><span style="white-space:nowrap;">财务管理</span></a></p>
                         </td>
                         <td id="" title="业务系统" class="topmenu systemName">
                             <a class="l-btn-text bannerMenu" href="javascript:void(0)">
-                                <lable class="fa fa-gears"></lable>
-                                <br><span style="white-space:nowrap;">业务系统</span>
+                                <p><lable class="fa fa-gears"></lable></p>
+                                <p><span style="white-space:nowrap;">业务系统</span></p>
                             </a>
                         </td>
                         <td id="" title="系统设置" class="topmenu systemName">
                             <a class="l-btn-text bannerMenu" href="javascript:void(0)">
-                                <lable class="fa  fa-shield"></lable>
-                                <br><span style="white-space:nowrap;">系统设置</span>
+                                <p><lable class="fa  fa-shield"></lable></p>
+                                <p><span style="white-space:nowrap;">系统设置</span></p>
                             </a>
                         </td>
                     </table>
