调整头部菜单

--- a/demo/index.html
+++ b/demo/index.html
@@ -76,8 +76,9 @@
                         </td>
                         <td id="" title="财务管理" class="topmenu systemName">
                             <a class="l-btn-text bannerMenu" href="javascript:void(0)">
-                                <p><lable class="fa  fa-weixin"></lable></p>
-                                <p><span style="white-space:nowrap;">财务管理</span></a></p>
+                                <p><lable class="fa fa-weixin"></lable></p>
+                                <p><span style="white-space:nowrap;">财务管理</span></p>
+                            </a>
                         </td>
                         <td id="" title="业务系统" class="topmenu systemName">
                             <a class="l-btn-text bannerMenu" href="javascript:void(0)">
