解决组合查询主键字段替换问题

--- a/demo/html/complex/datagrid.html
+++ b/demo/html/complex/datagrid.html
@@ -69,7 +69,7 @@
        }]">
     <thead>
     <tr>
-        <th data-options="field:'uuid',title:'ID',checkbox:true"></th>
+        <th data-options="field:'uuid',title:'UUID',checkbox:true"></th>
         <th data-options="field:'name',title:'商品名称',sortable:true"></th>
         <th data-options="field:'code',title:'商品编号',sortable:true"></th>
         <th data-options="field:'spec',title:'规格型号',sortable:true"></th>
