--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -92,8 +92,8 @@
                             <ul>
                                 <li>框架名称：TopJUI前端框架 v1.0正式版 <a href="http://www.topjui.com" target="_blank">官方网站</a></li>
                                 <li>开源下载：
-                                    <a href="https://github.com/xvpindex/TopJUI" target="_blank">GitHub</a>
-                                    <a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">码云</a>
+                                    <a href="https://github.com/xvpindex/TopJUI" target="_blank">GitHub下载</a>
+                                    <a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">码云下载</a>
                                 </li>
                                 <li>开发文档：<a href="http://www.topjui.com/document/index/index.html" target="_blank">TopJUI前端框架极速开发文档</a>
                                 </li>
