--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -92,7 +92,7 @@
                             <ul>
                                 <li>框架名称：TopJUI前端框架 v1.0正式版 <a href="http://www.topjui.com" target="_blank">官方网站</a></li>
                                 <li>开源代码：
-                                    <a href="https://github.com/xvpindex/TopJUI" target="_blank">GitHub下载</a>
+                                    <a href="https://github.com/xvpindex/TopJUI" target="_blank">GitHub下载</a> / 
                                     <a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">码云下载</a>
                                     （敬请star）
                                 </li>
