更改默认主题

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="./topjui/image/favicon.ico"/>
     <!-- TopJUI框架样式 -->
     <link type="text/css" href="./topjui/css/topjui.core.min.css" rel="stylesheet">
-    <link type="text/css" href="./topjui/themes/default/topjui.red.css" rel="stylesheet" id="dynamicTheme"/>
+    <link type="text/css" href="./topjui/themesdefault/topjui.bluelight.css" rel="stylesheet" id="dynamicTheme"/>
     <!-- FontAwesome字体图标 -->
     <link type="text/css" href="./topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- jQuery相关引用 -->
