--- a/demo/index.html
+++ b/demo/index.html
@@ -30,10 +30,15 @@
 </head>
 
 <body>
-<div id="loading"
-     style="position: fixed;top: -50%;left: -50%;width: 200%;height: 200%;background: #fff;z-index: 100;overflow: hidden;">
-    <img src="./topjui/image/ajax-loader.gif"
-         style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;margin: auto;"/>
+<div id="loading" class="loading-wrap">
+    <div class="loading-content">
+        <div class="loading-round">
+            <img src="./topjui/image/loading-bg.png" alt="">
+        </div>
+        <div class="loading-dot">
+            <img src="./topjui/image/loading-dot.png" alt="">
+        </div>
+    </div>
 </div>
 
 <div id="mm" class="easyui-menu submenubutton" style="width: 140px;">
