增加导航切换效果

--- a/demo/index.html
+++ b/demo/index.html
@@ -140,8 +140,7 @@
         </table>
     </div>
 
-    <div id="west"
-         data-options="region:'west',split:true,width:230,border:false,headerCls:'border_right',bodyCls:'border_right'"
+    <div id="west" data-options="region:'west',split:true,width:230,border:false,headerCls:'border_right',bodyCls:'border_right'"
          title="" iconCls="fa fa-dashboard">
         <div id="RightAccordion" class="easyui-accordion"></div>
         <!--<div id="menuTab" class="easyui-tabs" data-options="fit:true,border:false">
