--- a/demo/html/extend/editor_index.html
+++ b/demo/html/extend/editor_index.html
@@ -5,15 +5,14 @@
     <!-- 避免IE使用兼容模式 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="renderer" content="webkit">
-    <!-- EasyUI样式 -->
-    <link type="text/css" rel="stylesheet" href="../../topjui/themes/default/easyui.css">
     <!-- TopJUI框架样式 -->
-    <link type="text/css" rel="stylesheet" href="../../topjui/css/topjui.core.min.css">
+    <link type="text/css" href="../../topjui/css/topjui.core.min.css" rel="stylesheet">
+    <link type="text/css" href="../../topjui/themes/default/topjui.bluelight.css" rel="stylesheet" id="dynamicTheme"/>
+    <!-- FontAwesome字体图标 -->
+    <link type="text/css" href="../../topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- jQuery相关引用 -->
-    <script type="text/javascript" src="../../topjui/js/jquery.min.js"></script>
+    <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.cookie.js"></script>
-    <!-- TopJUI框架基础 -->
-    <script type="text/javascript" src="../../topjui/js/topjui.base.min.js"></script>
     <!-- TopJUI框架配置 -->
     <script type="text/javascript" src="../../static/public/js/topjui.config.js"></script>
     <!-- TopJUI框架核心-->
